fix scrolling SVG border artifacts on left overlay in IE9-11
see https://stackoverflow.com/questions/5971320/svg-image-is-not-cropped-in-ie9 for detailed explanation

--- a/src/3rdparty/walkontable/css/walkontable.css
+++ b/src/3rdparty/walkontable/css/walkontable.css
@@ -242,3 +242,7 @@
 .ht_clone_bottom .wtHolder {
   overflow: hidden;
 }
+
+.handsontable svg:not(:root) {
+  overflow: hidden; /* fix for IE, where SVG content is not cropped to the viewbox. Otherwise IE shows artifacts in SVG borders when scrolling with fixedColumnsLeft */
+}
